--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -16,7 +16,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 #: .\bookmarks\forms.py:67
 msgid "Friend's Name"
 msgstr ""
@@ -74,4 +74,4 @@ msgstr ""
 
 #: .\templates\friend_invite.html:17
 msgid "send invite"
-msgstr ""
+msgstr "envoyer une invitation"
